@@ -4,8 +4,6 @@ import android.net.ConnectivityManager;
 import android.net.NetworkInfo;
 import android.util.Log;
 
-import com.google.android.gms.auth.api.signin.GoogleSignIn;
-
 import org.apache.http.HttpResponse;
 import org.apache.http.client.ClientProtocolException;
 import org.apache.http.client.HttpClient;
@@ -19,8 +17,8 @@ import org.json.JSONObject;
 
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.HttpURLConnection;
+import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Timer;
@@ -35,10 +33,15 @@ import pl.understandable.understandable_app.user.requests.ShowWelcomeMessage;
 
 public class SyncManager {
 
+    private static boolean syncRequiredAfterReconnect = false;
     private static SyncStatus syncStatus = SyncStatus.OFFLINE;
 
-    public static boolean isSyncAvailable() {
+    public static boolean isSyncOnline() {
         return syncStatus.equals(SyncStatus.ONLINE);
+    }
+
+    private static boolean isSyncRequiredAfterReconnect() {
+        return syncRequiredAfterReconnect;
     }
 
     public static void init(final ConnectivityManager manager) {
@@ -46,49 +49,32 @@ public class SyncManager {
         TimerTask syncTask = new TimerTask() {
             @Override
             public void run() {
-                Log.d("SYNC", "==========================================================");
-                Log.d("SYNC", "Sync started");
                 if(!UserManager.isUserSignedIn()) {
-                    Log.d("SYNC", "No account detected");
-                    Log.d("SYNC", "Sync finished");
                     return;
                 }
-                Log.d("SYNC", "Account detected");
-                if(isNetworkAvailable(manager)) {
-                    Log.d("SYNC", "Available network detected");
-                    if(!isSyncAvailable()) {
-                        Log.d("SYNC", "Start sync from server");
-                        RequestExecutor.offerRequest(new ShowWelcomeMessage());
-                        boolean syncResult = syncFromServer();
-                        if(syncResult) {
-                            Log.d("SYNC", "Sync from server completed successfully");
-                        } else {
-                            Log.d("SYNC", "Sync from server not completed successfully");
-                        }
-                    }
-                    syncStatus  = SyncStatus.ONLINE;
 
-                    if(UserManager.isSyncRequired()) {
-                        Log.d("SYNC", "Start sync to server");
-                        boolean syncResult = syncToServer();
-                        if(syncResult) {
-                          Log.d("SYNC", "Sync to server completed successfully");
-                        } else {
-                            Log.d("SYNC", "Sync from server not completed successfully");
-                        }
-                        UserManager.setSyncRequired(false);
+                if(isNetworkAvailable(manager)) {
+                    if(!isSyncOnline() && !isSyncRequiredAfterReconnect()) {
+                        RequestExecutor.offerRequest(new ShowWelcomeMessage());
+                        syncFromServer();
+                    }
+                    syncStatus = SyncStatus.ONLINE;
+
+                    if(UserManager.isSyncRequired() || isSyncRequiredAfterReconnect()) {
+                        syncToServer();
                     }
                 } else {
-                    Log.d("SYNC", "No network available - sync stopped");
-                    if(isSyncAvailable()) {
+                    if(isSyncOnline()) {
+                        if(UserManager.isSyncRequired()) {
+                            syncRequiredAfterReconnect = true;
+                        }
                         RequestExecutor.offerRequest(new ShowSyncStoppedMessage());
                     }
                     syncStatus = SyncStatus.OFFLINE;
                 }
-                Log.d("SYNC", "Sync finished");
             }
         };
-        timer.scheduleAtFixedRate(syncTask, 10000L, 10000L);
+        timer.scheduleAtFixedRate(syncTask, 1000L, 5000L);
     }
 
     private static boolean isNetworkAvailable(ConnectivityManager manager) {
@@ -98,21 +84,17 @@ public class SyncManager {
         }
 
         try {
-            URI uri = new URI("http://www.understandable.pl/resources/script/check_connection.php");
-            HttpClient httpClient = new DefaultHttpClient();
-            HttpPost httpPost = new HttpPost(uri);
-            HttpResponse httpResponse = httpClient.execute(httpPost);
-        } catch (URISyntaxException e) {
-            e.printStackTrace();
-            return false;
-        } catch (ClientProtocolException e) {
-            e.printStackTrace();
-            return false;
+            HttpURLConnection urlc = (HttpURLConnection) (new URL("http://clients3.google.com/generate_204").openConnection());
+            urlc.setRequestProperty("User-Agent", "Android");
+            urlc.setRequestProperty("Connection", "close");
+            urlc.setConnectTimeout(1500);
+            urlc.connect();
+
+            return (urlc.getResponseCode() == 204 && urlc.getContentLength() == 0);
         } catch (IOException e) {
-            e.printStackTrace();
+            Log.e("SYNC-CONNECTION", "Error checking internet connection", e);
             return false;
         }
-        return true;
     }
 
     private static boolean syncToServer() {
@@ -128,12 +110,9 @@ public class SyncManager {
 
             HttpResponse httpResponse = client.execute(httpPost);
             String response = EntityUtils.toString(httpResponse.getEntity());
-            Log.d("SYNC-JSON", "Input: " + UserManager.getUser().toJson().toString());
-            Log.d("SYNC-JSON", "Elements to sync JSON: " + UserManager.getElementsToSyncJson().toString());
-            Log.d("WEB", "Http status code: " + httpResponse.getStatusLine().getStatusCode());
-            Log.d("SYNC-WEB", "Sync response: " + response);
 
             UserManager.clearElementsToSync();
+            UserManager.setSyncRequired(false);
 
         } catch (UnsupportedEncodingException e) {
             e.printStackTrace();
@@ -153,17 +132,12 @@ public class SyncManager {
             HttpClient client = new DefaultHttpClient();
             HttpPost httpPost = new HttpPost("https://www.understandable.pl/resources/script/sync_from_server.php");
 
-            Log.d("SYNC-WEB", "Token ID: " + UserManager.getUser().getTokenId());
-
             List valuePairs = new ArrayList(1);
             valuePairs.add(new BasicNameValuePair("token_id", UserManager.getUser().getTokenId()));
             httpPost.setEntity(new UrlEncodedFormEntity(valuePairs));
 
             HttpResponse httpResponse = client.execute(httpPost);
-            Log.d("WEB", "Http status code: " + httpResponse.getStatusLine().getStatusCode());
             String response = EntityUtils.toString(httpResponse.getEntity());
-
-            Log.d("SYNC-WEB", "Sync response: " + response);
 
             JSONObject data = new JSONObject(response);
             UserManager.getUser().updateFromJson(data);
